--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="../CSS/Covid.css" />
   </head>
   <body>
-    <h1>Fetching Data using Covid API</h1>
+    <header>
+        
+        <img src="./image/coronavirus-gc84d497b9_1920.png" alt="" srcset="">
+        <h1>Fetching Data using Covid API</h1>
+    </header>
+
     <div id="myDiv">
       <h2>Today Covid Cases</h2>
     </div>
