--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid19 Cases</title>
 
-    <link rel="stylesheet" href="../CSS/Covid.css" />
+    <link rel="stylesheet" href="./css/Covid.css">
   </head>
   <body>
     <header>
@@ -18,6 +18,6 @@
     <div id="myDiv">
       <h2>Today Covid Cases</h2>
     </div>
-    <script src="../js/Covid.js"></script>
+    <script src="./js/Covid.js"></script>
   </body>
 </html>
